--- a/style/style.css
+++ b/style/style.css
@@ -93,47 +93,49 @@ body{
     padding: 0 30px;
     border-top: 1px solid lightgrey;
 }
-footer button.show{
-    opacity: 1;
-    pointer-events: auto;
-    transform: scale(1);
+<!---anaaa----->
+.info_box .buttons button{
+    margin: 0 5px;
+    height: 40px;
+    width: 100px;
+    font-size: 16px;
+    font-weight: 500;
+    cursor: pointer;
+    border: none;
+    outline: none;
+    border-radius: 5px;
+    border: 1px solid #007bff;
+    transition: all 0.3s ease;
 }
 
-.result_box{
+.quiz_box{
+    width: 550px;
     background: #fff;
     border-radius: 5px;
-    display: flex;
-    padding: 25px 30px;
-    width: 450px;
-    align-items: center;
-    flex-direction: column;
-    justify-content: center;
     transform: translate(-50%, -50%) scale(0.9);
     opacity: 0;
     pointer-events: none;
     transition: all 0.3s ease;
 }
 
-.result_box .icon{
-    font-size: 100px;
-    color: #007bff;
-    margin-bottom: 10px;
-}
-
-.result_box .complete_text{
-    font-size: 20px;
-    font-weight: 500;
-}
-
-.result_box .score_text span{
+.quiz_box header{
+    position: relative;
+    z-index: 2;
+    height: 70px;
+    padding: 0 30px;
+    background: #fff;
+    border-radius: 5px 5px 0 0;
     display: flex;
-    margin: 10px 0;
-    font-size: 18px;
-    font-weight: 500;
+    align-items: center;
+    justify-content: space-between;
+    box-shadow: 0px 3px 5px 1px rgba(0,0,0,0.1);
 }
 
-.result_box .score_text span p{
-    padding: 0 4px;
+.quiz_box header .title{
+    font-size: 20px;
+    font-weight: 600;
+}
+<!----booda---->
     font-weight: 600;
 }
 
