--- a/style/style.css
+++ b/style/style.css
@@ -136,13 +136,31 @@ body{
     font-weight: 600;
 }
 <!----booda---->
-    font-weight: 600;
-}
+    section .option_list .option:last-child{
+        margin-bottom: 0px;
+    }
 
-.result_box .buttons{
-    display: flex;
-    margin: 20px 0;
-}
+    section .option_list .option:hover{
+        color: #004085;
+        background: #cce5ff;
+        border: 1px solid #b8daff;
+    }
+
+    section .option_list .option.correct{
+        color: #155724;
+        background: #d4edda;
+        border: 1px solid #c3e6cb;
+    }
+
+    section .option_list .option.incorrect{
+        color: #721c24;
+        background: #f8d7da;
+        border: 1px solid #f5c6cb;
+    }
+
+    section .option_list .option.disabled{
+        pointer-events: none;
+    }
 
 .result_box .buttons button{
     margin: 0 10px;
