--- a/style/style.css
+++ b/style/style.css
@@ -136,6 +136,33 @@ body{
     font-weight: 600;
 }
 <!----booda---->
+section{
+    padding: 25px 30px 20px 30px;
+    background: #fff;
+}
+
+section .que_text{
+    font-size: 25px;
+    font-weight: 600;
+}
+
+section .option_list{
+    padding: 20px 0px;
+    display: block;   
+}
+section .option_list .option{
+    background: rgb(46, 37, 177);
+    border: 1px solid #b94eb9;
+    border-radius: 5px;
+    padding: 8px 15px;
+    font-size: 17px;
+    margin-bottom: 15px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
     section .option_list .option:last-child{
         margin-bottom: 0px;
     }
